used tdd to create the PUT /user endpoint
