# docs/openapi.yaml
@@ -184,7 +184,7 @@ paths:
               examples:
                 not found:
                   value:
-                    msg: We could not find an expense with that id.                      
+                    msg: We could not find an expense with that id.           
         '500':
           description: internal server error
           content:
@@ -343,7 +343,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Login_credentials'      
+              $ref: '#/components/schemas/Create_user_credentials'      
       responses:
         '201':
           description: created
@@ -373,7 +373,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Login_credentials_update'       
+              $ref: '#/components/schemas/Create_user_credentials_update'       
       responses:
         '200':
           description: ok
@@ -495,15 +495,27 @@ components:
         password:
           type: string
           example: sparkle47
-    Login_credentials_update:
+    Create_user_credentials:
       type: object
       properties:
         email:
           type: string
           example: unicorn_princess@email.com
-        old_password:
+        password:
           type: string
-          example: sparkle47          
-        new_password:
+          example: sparkle47
+        passwordConf:
           type: string
-          example: 47sparks
+          example: sparkle47
+    Create_user_credentials_update:
+      type: object
+      properties:
+        email:
+          type: string
+          example: unicorn_princess@email.com
+        password:
+          type: string
+          example: sparkle74
+        passwordConf:
+          type: string
+          example: sparkle74
